# agents

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml
knowledgebase/: CardTransactions_Genuine_AdamThorpe.docx  CardTransactions_Genuine_JohnMayo.docx  data-extracts.txt
myagents/: CCfrauddetectionagent.py  coverletter.py  diagnosis.py  huggingface.py  tailored_coverletter_agent.py  tailored_coverletter_agent_ui.py
